2011-01-22  Susann Moog  <typo3@susanne-moog.de>

	* Fixed bug #17091: Pagetree: undelete recursive deleted pages only undeletes the top node, not the other child nodes of the deleted page (Thanks to Stefan Galinski)
	* Fixed bug #17204: Pagetree: Only call the singleClick method if the navigation component is visible (Thanks to Stefan Galinski)
	* Fixed bug #17158: Pagetree: now uses [No title] from language file if no title is there (Thanks to Stefan Galinski)
	* Fixed bug #17208: Backwards compatibility broken (top.nav) and JS errors when editing files in file list module

2011-01-22  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #17107: page/branch action submenus close whole menu on click (Thanks to Stefan Galinski)
	* Fixed bug #17145: Replace label "Hide" in Pagetree menu with "Disable" (Thanks to Stefan Galinski)
	* Fixed bug #17161: be_layout foreign_table_where excludes local page when GRSP set (Thanks to Jo Hasenau)

2011-01-21  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Raised version numbers of Extbase and Fluid to 1.3.0RC1.

2011-01-21  Steffen Kamper  <steffen@typo3.org>

	* Follow-up to #16996: CSH tooltip shows for too long time - only hold tip when more info is available
	* Follow-up to #17162: Missing localization in t3lib_tsstyleconfig - add HSC
	* Fixed bug #17190: Make the drag area on the split bars wider than 1px

2011-01-21  Tolleiv Nietsch  <typo3@tolleiv.de>

	* Synchronized external repositories of version (tag 4.5.0rc1) and workspaces (tag 4.5.0rc1)
	* Fixed bug #16935: tx_coreupdates_installversioning is obsolete

2011-01-21  Ernesto Baschny  <ernst@cron-it.de>

	* Merged Linkvalidator (tagged as 4.5RC1)
	* Reverted #13319: Removed Plupload integration and removed contrib/plupload
	* Fixed bug #17182: migrateWorkspaces in Install-Tool shows up even if nothing has to be done (Thanks to Tolleiv Nietsch)
	* Fixed bug #17184: Disable the CSRF protection in ExtDirect calls coming from the frontend (Thanks to Stefan Galinski)